[tool.poetry]
name = "liulianmao-fastapi"
version = "0.1.0"
description = ""
authors = ["快乐的老鼠宝宝 <laoshubaby@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.1"
liulianmao = "^2.2.1.post2"
loguru = "^0.7.2"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
